--- a/public/themes/default/static/css/common.css
+++ b/public/themes/default/static/css/common.css
@@ -12,6 +12,15 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+
 ul {
   list-style: none;
   padding: 0;
