--- a/public/themes/default_en-us/static/css/common.css
+++ b/public/themes/default_en-us/static/css/common.css
@@ -12,6 +12,15 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+
 ul {
   list-style: none;
   padding: 0;
@@ -25,7 +34,7 @@ li {
 /* 灰色板块 */
 .grey {
   width: 100%;
-  padding-top: 100px;
+  padding-top: 50px;
   background-color: var(--grey-color);
   overflow: hidden;
 }
@@ -114,13 +123,13 @@ li {
     color: #000;
   }
 
-
   .big-title {
     font-size: 2rem;
     font-weight: 700;
     margin-bottom: 1.5rem;
     color: #000;
   }
+
   .main-title .small-title {
     font-size: 1.4rem;
     color: var(--text8-color);
