--- a/public/themes/default/static/css/footer.css
+++ b/public/themes/default/static/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  background-color: var(--primary-color);
+  background-color: #98C193;
   padding-top: 50px;
   min-width: 1200px;
 }
@@ -11,12 +11,17 @@
 }
 
 .footer_box_top_left {
+  background-color: #98C193;
   display: flex;
   flex-direction: column;
+  border-radius: 8px;
+  background-color: #9AC69F;
+  padding: 20px 20px;
+  color: #000;
 }
 
 .footer_box_top_left_logo {
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .footer_box_top_left_logo img {
