--- a/public/themes/default/static/css/products.css
+++ b/public/themes/default/static/css/products.css
@@ -19,6 +19,7 @@ a:focus {
 
 .productTag_content {
   display: flex;
+  flex-wrap: wrap;
   overflow-x: scroll;
   /* 隐藏滚动条 */
   scrollbar-width: none;
@@ -88,14 +89,20 @@ a:focus {
   height: 150px;
   object-fit: cover;
 }
-
-.productList_box_item_title {
+.productList_box_item_bottom{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.productList_box_item_bottom_title {
+  flex: 1;
   font-size: 16px;
   color: #333;
   margin: 15px;
 }
 
-.productList_box_item_desc {
+.productList_box_item_bottom_detail {
   font-size: 14px;
   line-height: 1.5;
   color: #999;
@@ -189,7 +196,24 @@ a:focus {
   .productList_box_item {
     width: 100%;
   }
-
+  .productList_box_item_bottom{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .productList_box_item_bottom_title{
+    text-align: left;
+    flex: 1;
+    font-size: 1.2rem;
+    color: #333;
+    margin: 1rem;
+  }
+  .productList_box_item_bottom_detail{
+    font-size: 1.1rem;
+    color: #333;
+    margin: 1rem;
+  }
   .productList_box a:nth-child(4n) {
     margin-right: 1.5rem;
   }
